config: reflect renamed option

--- a/mpv.conf
+++ b/mpv.conf
@@ -114,11 +114,11 @@ vo=opengl:dither-depth=1
 
 [high-quality]
 profile-desc="High quality VO settings"
-vo=opengl-hq:scale=ewa_lanczossharp:cscale=ewa_lanczossoft:dscale=mitchell:tscale=oversample:scale-antiring=0.8:cscale-antiring=0.9:dither-depth=auto:target-prim=bt.709:scaler-resizes-only=yes:sigmoid-upscaling=yes:blend-subtitles=no:fancy-downscaling=yes:deband=yes:deband-iterations=4:deband-grain=32
+vo=opengl-hq:scale=ewa_lanczossharp:cscale=ewa_lanczossoft:dscale=mitchell:tscale=oversample:scale-antiring=0.8:cscale-antiring=0.9:dither-depth=auto:target-prim=bt.709:scaler-resizes-only=yes:sigmoid-upscaling=yes:blend-subtitles=no:correct-downscaling=yes:deband=yes:deband-iterations=4:deband-grain=32
 
 [mid-quality]
 profile-desc="Medium quality VO settings"
-vo=opengl-hq:scale=spline36:cscale=spline36:dscale=mitchell:tscale=oversample:scale-antiring=0.8:cscale-antiring=0.9:dither-depth=auto:target-prim=bt.709:scaler-resizes-only=yes:sigmoid-upscaling=yes:blend-subtitles=yes:fancy-downscaling=yes:deband=yes:deband-iterations=2:deband-grain=32
+vo=opengl-hq:scale=spline36:cscale=spline36:dscale=mitchell:tscale=oversample:scale-antiring=0.8:cscale-antiring=0.9:dither-depth=auto:target-prim=bt.709:scaler-resizes-only=yes:sigmoid-upscaling=yes:blend-subtitles=yes:correct-downscaling=yes:deband=yes:deband-iterations=2:deband-grain=32
 
 [low-quality]
 profile-desc="Low energy VO settings"
