--- a/input.conf
+++ b/input.conf
@@ -13,6 +13,14 @@ MOUSE_BTN5     ignore
 MOUSE_BTN6     ignore
 
 
+# trackpad
+
+AXIS_UP    ignore
+AXIS_DOWN  ignore
+AXIS_LEFT  ignore
+AXIS_RIGHT ignore
+
+
 # arrow keys
 
 RIGHT       osd-msg-bar seek +5  relative+keyframes
@@ -76,17 +84,18 @@ $      cycle_values vf "format=colormatrix=auto" "format=colormatrix=bt.601" "fo
 Q      quit_watch_later
 q      {encode} quit 4
 
-w      playlist_prev ; show_text "${osd-ass-cc/0}{\\fs8}${osd-ass-cc/1}${playlist}"
-e      playlist_next ; show_text "${osd-ass-cc/0}{\\fs8}${osd-ass-cc/1}${playlist}"
-W      show_text "${osd-ass-cc/0}{\\fs8}${osd-ass-cc/1}${playlist}"
-E      show_text "${osd-ass-cc/0}{\\fs8}${osd-ass-cc/1}${playlist}"
+w      playlist_prev ; show_text "${playlist}"
+e      playlist_next ; show_text "${playlist}"
+W      show_text "${playlist}"
+E      show_text "${playlist}"
 
 r      set ab-loop-a ${time-pos}
 t      set ab-loop-b ${time-pos}
 R      set ab-loop-a no
 T      set ab-loop-b no
 
-i      script_binding stats
+#i     used by stats script
+#I     used by stats script
 o      cycle framedrop
 O      osd
 p      show_progress
@@ -95,7 +104,6 @@ z      ignore
 u      ignore
 Z      ignore
 U      ignore
-I      ignore
 P      ignore
 
 
@@ -104,7 +112,7 @@ P      ignore
 # [A] [S] [D] [F] [G] [H] [J] [K] [L]  '
 
 a      cycle audio                          # switch audio streams
-A      af toggle "drc=1"                    # dynamic range compression
+A      cycle_values af "drc:1" "drc:2" "lavfi=[dynaudnorm]" ""         # dynamic range compression
 s      cycle sub                            # cycle through subtitles
 S      cycle sub-visibility
 CTRL+s cycle secondary-sid
@@ -137,10 +145,10 @@ SHARP  vf toggle "format=colorlevels=full"
 # [y] [x] [c] [v] [b] [n] [m] [,] [.]
 # [Y]  X   C   V   B  [N] [M]  ;   :
 
-y      show_text "${osd-ass-cc/0}{\\fs8}${osd-ass-cc/1}${chapter-list}"
-Y      show_text "${osd-ass-cc/0}{\\fs8}${osd-ass-cc/1}${playlist}"
-CTRL+y show_text "${osd-ass-cc/0}{\\fs8}${osd-ass-cc/1}${playlist}"
-x      show_text "${osd-ass-cc/0}{\\fs8}${osd-ass-cc/1}${track-list}"
+y      show_text "${chapter-list}"
+Y      show_text "${playlist}"
+CTRL+y show_text "${playlist}"
+x      show_text "${track-list}"
 
 c      set speed 1.0
 v      add speed -0.05
