--- a/mpv.conf
+++ b/mpv.conf
@@ -5,7 +5,7 @@
 # General #
 ###########
 
-save-position-on-quit
+#save-position-on-quit
 no-border                               # no window title bar
 msg-module                              # prepend module name to log messages
 msg-color                               # color log messages on terminal
@@ -13,20 +13,18 @@ term-osd-bar                            # display a progress bar on the terminal
 use-filedir-conf                        # look for additional config files in the directory of the opened file
 pause                                   # no autoplay
 keep-open                               # keep the player open when a file's end is reached
-framedrop=vo                            # drop frames in case your computer is to slow for realtime playback
 autofit-larger=100%x95%                 # resize window in case it's larger than W%xH% of the screen
 deinterlace=auto                        # 'auto' does not imply interlacing-detection
 cursor-autohide-fs-only                 # don't autohide the cursor in window mode, only fullscreen
-input-media-keys=yes                    # enable/disable OSX media keys
+input-media-keys=no                     # enable/disable OSX media keys
 cursor-autohide=1000                    # autohide the curser after 1s
-fs-black-out-screens
 
 screenshot-format=png
 screenshot-png-compression=8
 screenshot-template='~/Desktop/%F (%P) %n'
 
 hls-bitrate=max                         # use max quality for HLS streams
-ytdl-raw-options=format="(bestvideo+bestaudio[height>=?1080]/best)[protocol!=rtmp]"
+
 
 #########
 # Cache #
@@ -42,8 +40,6 @@ cache-secs=10                           # how many seconds of audio/video to pre
 #############
 # OSD / OSC #
 #############
-
-osc                                     # activate on screen controls
 
 osd-level=1                             # enable osd and display --osd-status-msg on interaction
 osd-duration=2500                       # hide the osd after x ms
@@ -64,6 +60,8 @@ osd-bar-w=60                            # width of " " "
 # Subtitles #
 #############
 
+sub-use-margins
+
 demuxer-mkv-subtitle-preroll            # try to correctly show embedded subs when seeking
 sub-auto=fuzzy                          # external subs don't have to match the file name exactly to autoload
 sub-paths=ass:srt:sub:subs:subtitles    # search for external subs in the listed subdirectories
@@ -73,7 +71,7 @@ ass-force-style=Kerning=yes             # allows you to override style parameter
 
 # the following options only apply to subtitles without own styling (i.e. not ASS but e.g. SRT)
 sub-text-font="Source Sans Pro Semibold"
-sub-text-font-size=52
+sub-text-font-size=36
 sub-text-color="#FFFFFFFF"
 sub-text-border-color="#FF262626"
 sub-text-border-size=3.2
@@ -87,7 +85,7 @@ sub-text-spacing=0.5
 #############
 
 slang=enm,en,eng,de,deu,ger             # automatically select these subtitles (decreasing priority)
-alang=jp,jpn,en,eng,de,deu,ger          # automatically select these audio tracks (decreasing priority)
+alang=ja,jp,jpn,en,eng,de,deu,ger       # automatically select these audio tracks (decreasing priority)
 
 
 #########
@@ -105,26 +103,20 @@ volume=100                              # default volume, 100 = unchanged
 # Video Output # active VOs (and some other options) are set externally by a script
 ################
 
-# use this to detect auto-options malfunctions
-vo=opengl:dither-depth=1
+vo=opengl-hq
 
-
-# - gamma: 1.961/x = output gamma => 1.961/0.9338 = 2.1 (mpv assumes 1.961 gamma internally)
-# - zeros for jinc() function: (scale-radius for ewa_lanczos)
-#     3.2383154841662362 4.2410628637960699 5.2427643768701817 ... 8.2453949139520427 ...
-# - target-prim=bt.709 || icc-profile-auto
 
 [high-quality]
 profile-desc="High quality VO settings"
-vo=opengl-hq:scale=ewa_lanczossharp:cscale=ewa_lanczossoft:dscale=mitchell:tscale=oversample:scale-antiring=0.8:cscale-antiring=0.9:dither-depth=auto:target-prim=bt.709:scaler-resizes-only=yes:sigmoid-upscaling=yes:blend-subtitles=no:correct-downscaling=yes:deband=yes:deband-iterations=4:deband-grain=32
+vo=opengl-hq:scale=ewa_lanczossharp:cscale=ewa_lanczossoft:dscale=mitchell:tscale=triangle:scale-antiring=0.8:cscale-antiring=0.9:dither-depth=auto:target-prim=bt.709:correct-downscaling=yes
 
 [mid-quality]
 profile-desc="Medium quality VO settings"
-vo=opengl-hq:scale=spline36:cscale=spline36:dscale=mitchell:tscale=oversample:scale-antiring=0.8:cscale-antiring=0.9:dither-depth=auto:target-prim=bt.709:scaler-resizes-only=yes:sigmoid-upscaling=yes:blend-subtitles=yes:correct-downscaling=yes:deband=yes:deband-iterations=2:deband-grain=32
+vo=opengl-hq:scale=spline36:cscale=spline36:dscale=mitchell:tscale=triangle:scale-antiring=0.8:cscale-antiring=0.9:dither-depth=auto:target-prim=bt.709:correct-downscaling=yes
 
 [low-quality]
 profile-desc="Low energy VO settings"
-vo=opengl:scale=spline36:dscale=mitchell:tscale=oversample:dither-depth=auto:target-prim=bt.709:scaler-resizes-only=yes:sigmoid-upscaling=yes:blend-subtitles=yes
+vo=opengl:scale=spline36:dscale=mitchell:tscale=triangle:dither-depth=auto:target-prim=bt.709:correct-downscaling=yes
 hwdec=auto
 
 [default]
@@ -138,17 +130,15 @@ hwdec=auto
 cache=yes
 cache-default=500000                    # size in KB
 cache-backbuffer=250000                 # size in KB
-cache-secs=60                           # how many seconds of audio/video to prefetch
-#no-cache-pause                         # if the player should pause when the cache runs low
-user-agent='Mozilla/5.0 (Macintosh; Intel Mac OS X 10.10; rv:37.0) Gecko/20100101 Firefox/37.0'
+cache-secs=100                          # how many seconds of audio/video to prefetch
+user-agent='Mozilla/5.0 (Macintosh; Intel Mac OS X 10.11; rv:47.0) Gecko/20100101 Firefox/47.0'
 
 [protocol.http]
 cache=yes
 cache-default=500000                    # size in KB
 cache-backbuffer=250000                 # size in KB
-cache-secs=60                           # how many seconds of audio/video to prefetch
-#no-cache-pause                         # if the player should pause when the cache runs low
-user-agent='Mozilla/5.0 (Macintosh; Intel Mac OS X 10.10; rv:37.0) Gecko/20100101 Firefox/37.0'
+cache-secs=100                          # how many seconds of audio/video to prefetch
+user-agent='Mozilla/5.0 (Macintosh; Intel Mac OS X 10.11; rv:47.0) Gecko/20100101 Firefox/47.0'
 
 [extension.gif]
 cache=no
