--- a/input.conf
+++ b/input.conf
@@ -112,7 +112,7 @@ P      ignore
 # [A] [S] [D] [F] [G] [H] [J] [K] [L]  '
 
 a      cycle audio                          # switch audio streams
-A      cycle-values af "drc:1" "drc:2" "lavfi=[dynaudnorm]" ""         # dynamic range compression
+A      cycle-values af "lavfi=[dynaudnorm=f=200:g=5:r=0.2]" "drc:1" "drc:2" ""         # dynamic range compression
 s      cycle sub                            # cycle through subtitles
 S      cycle sub-visibility
 CTRL+s cycle secondary-sid
