--- a/mpv.conf
+++ b/mpv.conf
@@ -24,7 +24,7 @@ screenshot-png-compression=8
 screenshot-template='~/Desktop/%F (%P) %n'
 
 hls-bitrate=max                         # use max quality for HLS streams
-ytdl-raw-options=format="rtmp-PREMIUM/h264_aac_ts_http_m3u8_http-3264/vp8_vorbis_webm_http_na_na-veryhigh/bestvideo+bestaudio/best"
+ytdl-raw-options=format="[protocol!=http_dash_segments][protocol!=rtmp]"
 
 
 #########
@@ -32,7 +32,7 @@ ytdl-raw-options=format="rtmp-PREMIUM/h264_aac_ts_http_m3u8_http-3264/vp8_vorbis
 #########
 
 cache=yes
-cache-default=800000                    # size in KB
+cache-default=8000000                   # size in KB
 cache-backbuffer=25000                  # size in KB
 cache-initial=0                         # start playback when your cache is filled up with x kB
 cache-secs=10                           # how many seconds of audio/video to prefetch if the cache is active
@@ -62,24 +62,24 @@ osd-bar-w=60                            # width of " " "
 #############
 
 sub-use-margins
-ass-force-margins
+sub-ass-force-margins
 
 demuxer-mkv-subtitle-preroll            # try to correctly show embedded subs when seeking
 sub-auto=fuzzy                          # external subs don't have to match the file name exactly to autoload
 sub-paths=ass:srt:sub:subs:subtitles    # search for external subs in the listed subdirectories
 embeddedfonts=yes                       # use embedded fonts for SSA/ASS subs
 sub-fix-timing=no                       # do not try to fix gaps (which might make it worse in some cases)
-ass-force-style=Kerning=yes             # allows you to override style parameters of ASS scripts
+sub-ass-force-style=Kerning=yes         # allows you to override style parameters of ASS scripts
 
 # the following options only apply to subtitles without own styling (i.e. not ASS but e.g. SRT)
-sub-text-font="Source Sans Pro Semibold"
-sub-text-font-size=36
-sub-text-color="#FFFFFFFF"
-sub-text-border-color="#FF262626"
-sub-text-border-size=3.2
-sub-text-shadow-offset=1
-sub-text-shadow-color="#33000000"
-sub-text-spacing=0.5
+sub-font="Source Sans Pro Semibold"
+sub-font-size=36
+sub-color="#FFFFFFFF"
+sub-border-color="#FF262626"
+sub-border-size=3.2
+sub-shadow-offset=1
+sub-shadow-color="#33000000"
+sub-spacing=0.5
 
 
 #############
@@ -104,41 +104,65 @@ volume=100                              # default volume, 100 = unchanged
 # Video Output #
 ################
 
-# Active VOs (and some other options) are set externally by a script
-# The profiles here are kind of a fallback
+# Active VOs (and some other options) are set conditionally
+# See here for more information: https://github.com/wm4/mpv-scripts/blob/master/auto-profiles.lua
+
+# Defaults for all profiles
+vo=opengl
+tscale=linear
+
 
 [high-quality]
-profile-desc="High quality VO settings"
-vo=opengl
-profile=opengl-hq
+profile-desc=cond:is_desktop() and get('width', math.huge) < 3840
 scale=ewa_lanczossharp
 cscale=ewa_lanczossoft
 dscale=mitchell
-tscale=linear
-scale-antiring=0.8
-cscale-antiring=0.9
+scale-antiring=0.7
+cscale-antiring=0.7
+dither-depth=auto
+correct-downscaling=yes
+sigmoid-upscaling=yes
+deband=yes
 
 [mid-quality]
-profile-desc="Medium quality VO settings"
-vo=opengl
-profile=opengl-hq
+profile-desc=cond:(is_laptop() and not on_battery() and get('width', math.huge) < 1920) or (is_desktop() and get('width', math.huge) >= 3840)
 scale=spline36
-cscale=spline36
+cscale=bilinear
 dscale=mitchell
-tscale=linear
-scale-antiring=0.8
-cscale-antiring=0.9
+scale-antiring=1.0
+cscale-antiring=1.0
+dither-depth=auto
+correct-downscaling=yes
+sigmoid-upscaling=yes
+deband=yes
 
 [low-quality]
-profile-desc="Low energy VO settings"
-vo=opengl
-scale=spline36
-dscale=mitchell
-tscale=linear
-hwdec=auto
+profile-desc=cond:is_laptop() and (on_battery() or get('width', math.huge) >= 1920)
+scale=bilinear
+cscale=bilinear
+dscale=bilinear
+scale-antiring=0.0
+cscale-antiring=0.0
+dither-depth=no
+correct-downscaling=no
+sigmoid-upscaling=no
+deband=no
+
+[60FPS]
+profile-desc=cond:is_laptop() and get('container-fps', 0) >= 59
+scale=bilinear
+cscale=bilinear
+
+[4K]
+profile-desc=cond:get('width', -math.huge) >= 3840
+vd-lavc-threads=32
+
+[4K-inverted]
+profile-desc=cond:get('width', -math.huge) < 3840
+vd-lavc-threads=0
+
 
 [default]
-vo=opengl
 
 
 ###################################
