General config changes

--- a/mpv.conf
+++ b/mpv.conf
@@ -24,7 +24,7 @@ screenshot-png-compression=8
 screenshot-template='~/Desktop/%F (%P) %n'
 
 hls-bitrate=max                         # use max quality for HLS streams
-ytdl-raw-options=format="[protocol!=http_dash_segments][protocol!=rtmp]"
+ytdl-format=bestvideo[height<=?1080][fps<=?30][vcodec!=?vp9][protocol!=http_dash_segments]+bestaudio/best #[protocol!=http_dash_segments][protocol!=rtmp]
 
 
 #########
@@ -32,7 +32,7 @@ ytdl-raw-options=format="[protocol!=http_dash_segments][protocol!=rtmp]"
 #########
 
 cache=yes
-cache-default=8000000                   # size in KB
+cache-default=5000000                   # size in KB
 cache-backbuffer=25000                  # size in KB
 cache-initial=0                         # start playback when your cache is filled up with x kB
 cache-secs=10                           # how many seconds of audio/video to prefetch if the cache is active
@@ -44,7 +44,7 @@ cache-secs=10                           # how many seconds of audio/video to pre
 
 osd-level=1                             # enable osd and display --osd-status-msg on interaction
 osd-duration=2500                       # hide the osd after x ms
-osd-status-msg='${time-pos} / ${duration}${?percent-pos:　(${percent-pos}%)}${?vo-drop-frame-count:${!vo-drop-frame-count==0:　Dropped: ${vo-drop-frame-count}}}\n${?chapter:Chapter: ${chapter}}'
+osd-status-msg='${time-pos} / ${duration}${?percent-pos:　(${percent-pos}%)}${?frame-drop-count:${!frame-drop-count==0:　Dropped: ${frame-drop-count}}}\n${?chapter:Chapter: ${chapter}}'
 
 osd-font='Source Sans Pro'
 osd-font-size=32
@@ -110,7 +110,9 @@ volume=100                              # default volume, 100 = unchanged
 
 # Defaults for all profiles
 vo=opengl
-tscale=linear
+tscale=catmull_rom                      # sharp: oversample <-> linear (triangle) <-> catmull_rom <-> mitchell <-> gaussian <-> bicubic : smooth
+opengl-early-flush=no
+opengl-pbo=yes
 
 
 [high-quality]
@@ -124,6 +126,7 @@ dither-depth=auto
 correct-downscaling=yes
 sigmoid-upscaling=yes
 deband=yes
+hwdec=no
 
 [mid-quality]
 profile-desc=cond:(is_laptop() and not on_battery() and get('width', math.huge) < 1920) or (is_desktop() and get('width', math.huge) >= 3840)
@@ -136,6 +139,7 @@ dither-depth=auto
 correct-downscaling=yes
 sigmoid-upscaling=yes
 deband=yes
+hwdec=no
 
 [low-quality]
 profile-desc=cond:is_laptop() and (on_battery() or get('width', math.huge) >= 1920)
@@ -148,6 +152,7 @@ dither-depth=no
 correct-downscaling=no
 sigmoid-upscaling=no
 deband=no
+hwdec=auto
 
 [60FPS]
 profile-desc=cond:is_laptop() and get('container-fps', 0) >= 59
