Slight change of wording

--- a/mpv.conf
+++ b/mpv.conf
@@ -106,7 +106,7 @@ volume=100                              # default volume, 100 = unchanged
 
 # Active VOs (and some other options) are set conditionally
 # See here for more information: https://github.com/wm4/mpv-scripts/blob/master/auto-profiles.lua
-# The script was slightly modified, functions from scripts/auto-profiles-functions.lua are imported
+# The script was modified to import functions from scripts/auto-profiles-functions.lua
 
 # Defaults for all profiles
 vo=opengl
