Overhaul key bindings
Mostly changes to accommodate to my changed keyboard layout

--- a/input.conf
+++ b/input.conf
@@ -45,7 +45,7 @@ PGDWN osd-msg-bar seek -600 relative+keyframes
 
 
 # [1] [2] [3] [4] [5] [6] [7] [8] [9] [0]
-# [!] ["] [§] [$]  %   &   /   (  [)] [=] ?
+# [!] [@]  #   $   %   ^   &   *  [(] [)]
 
 1      add contrast -1 ; show-text "Contrast: ${contrast}"
 2      add contrast +1 ; show-text "Contrast: ${contrast}"
@@ -55,104 +55,103 @@ PGDWN osd-msg-bar seek -600 relative+keyframes
 6      add gamma +1 ; show-text "Gamma: ${gamma}"
 7      add saturation -1 ; show-text "Saturation: ${saturation}"
 8      add saturation +1 ; show-text "Saturation: ${saturation}"
+
 9      add volume -2 ; show-text "Volume: ${volume}"
 0      add volume +2 ; show-text "Volume: ${volume}"
-
-)      add balance -0.1 ; show-text "Audio Balance (pan): ${balance}"  # adjust audio balance in favor of left
-=      add balance +0.1 ; show-text "Audio Balance (pan): ${balance}"  #                                  right
+(      add balance -0.1 ; show-text "Audio Balance (pan): ${balance}"  # adjust audio balance in favor of left
+)      add balance +0.1 ; show-text "Audio Balance (pan): ${balance}"  #                                  right
 
 !      cycle ontop
-# cycle colormatrix-input-range
-"      cycle-values vf "format=colorlevels=full" "format=colorlevels=auto" "format=colorlevels=limited"
-# cycle colormatrix-output-range
-§      cycle-values vf "format=outputlevels=full" "format=outputlevels=auto" "format=outputlevels=limited"
-# cycle colormatrix
-$      cycle-values vf "format=colormatrix=auto" "format=colormatrix=bt.601" "format=colormatrix=bt.709" "format=colormatrix=bt.2020-ncl" "format=colormatrix=bt.2020-cl" "format=colormatrix=smpte-240m"
+@      cycle-values vf "format=colorlevels=full" "format=colorlevels=auto" "format=colorlevels=limited"
 
+#      ignore
+$      ignore
 %      ignore
+^      ignore
 &      ignore
-/      ignore
-(      ignore
-?      ignore
+*      ignore
 
 
 
-# [q] [w] [e] [r] [t] z u [i] [o] [p]
-# [Q] [W] [E] [R] [T] Z U  I  [O]  P
+# [q] [w] [e] [r] [t] [y] u [i] [o] [p]
+# [Q] [W] [E] [R] [T] [Y] U [I]  O   P
 
-#q      quit # handeled by auto-save-state.lua script
+q      quit
 Q      quit-watch-later
-q      {encode} quit 4
 
 w      playlist-prev ; show-text "${playlist}"
 e      playlist-next ; show-text "${playlist}"
 W      show-text "${playlist}"
 E      show-text "${playlist}"
 
-r      set ab-loop-a ${time-pos}
-t      set ab-loop-b ${time-pos}
-R      set ab-loop-a no
-T      set ab-loop-b no
+r      cycle-values video-rotate 90 180 270 0
+R      ignore
+
+t      set ab-loop-a ${time-pos}
+y      set ab-loop-b ${time-pos}
+T      set ab-loop-a no
+Y      set ab-loop-b no
+
+u      ignore
+U      ignore
 
 i      script-binding stats/display_stats
 I      script-binding stats/display_stats_toggle
-o      cycle framedrop
-O      osd
+o      osd
+O      ignore
 p      show-progress
-
-z      ignore
-u      ignore
-Z      ignore
-U      ignore
 P      ignore
 
 
 
-# [a] [s] [d] [f] [g] [h] [j] [k] [l] [#]
-# [A] [S] [D] [F] [G] [H] [J] [K] [L]  '
+# [a] [s] [d] [f] [g] [h] [j] [k] [l]
+# [A] [S] [D] [F] [G] [H] [J] [K] [L]
 
 a      cycle audio                          # switch audio streams
-A      cycle-values af "lavfi=[dynaudnorm=f=200:g=5:r=0.2]" "drc:1" "drc:2" ""         # dynamic range compression
+A      cycle-values af "lavfi=[dynaudnorm=f=200:g=11:r=0.2]" "drc:1" "drc:2" ""         # dynamic range compression
+
 s      cycle sub                            # cycle through subtitles
 S      cycle sub-visibility
 CTRL+s cycle secondary-sid
 ALT+s  cycle-values ass-force-margins "yes" "no"  # does not work with :blend-subtitles
+
 d      cycle-values window-scale "1.5" "2.0" "0.5" "1.0" ; show-text "Scale: ${window-scale}"
-D      cycle-values video-aspect "4:3" "16:9" "16:10" "2.35:1" "-1" ; show-text "Aspect Ratio: ${?video-aspect==1.500:3:2}${?video-aspect==1.333:4:3}${?video-aspect==1.778:16:9}${?video-aspect==1.600:16:10}${?video-aspect==2.350:2.35:1}"
+D      cycle-values video-aspect "4:3" "16:9" "16:10" "2.35:1" "no" "-1"
 CTRL+d cycle video
+
 f      cycle fullscreen ; show-text "Scale: ${window-scale}"
 F      vf clr ""                            # clear all filters
-
-g      vf toggle format=yuv420p,vapoursynth=~~/vs-scripts/motion-interpolation.py:2
-G      vf toggle vapoursynth=~~/vs-scripts/f3kdb.py
-Ctrl+g vf toggle format=yuv420p,vapoursynth=~~/vs-scripts/motion-interpolation-brokenfps.py:2
-h      cycle deinterlace
-H      script-binding autodeint
-Ctrl+h vf toggle vapoursynth=~~/vs-scripts/decimate.py
-j      vf toggle "lavfi=[hqdn3d=2.0]"       # denoise
-J      vf toggle "lavfi=[unsharp]"          # sharpen
-k      vf toggle "eq=1:-1" ; show-text "Invert luma"
-K      cycle-values hue 100 0 ; show-text "Invert chroma"
+g      cycle-values video-sync display-resample audio ; cycle-values interpolation yes no ; show-text "Interpolation: ${interpolation} (${tscale})"
+G cycle-values tscale "oversample" "linear" "catmull_rom" "mitchell" "bicubic" ; show-text "Interpolation: ${interpolation} (${tscale})"
+CTRL+g cycle-values interpolation no yes ; show-text "Interpolation: ${interpolation} (${tscale})"
+CTRL+h vf toggle format=yuv420p,vapoursynth=~~/vs-scripts/motion-interpolation.py:2
+j      cycle deband
+J      cycle deinterlace
+CTRL+j script-binding autodeint
+k      vf toggle "lavfi=[hqdn3d=2.0]"       # denoise
+K      vf toggle "lavfi=[unsharp]"          # sharpen
 
 l      cycle-values loop yes no ; show-text "${?=loop==inf:Looping enabled}${?=loop==no:Looping disabled}"
 L      cycle-values loop-file yes no ; show-text "${?=loop-file==yes:Looping enabled (file)}${?=loop-file==no:Looping disabled (file)}"
 CTRL+l ab-loop
 
-SHARP  vf toggle "format=colorlevels=full"
-'      cycle-values video-rotate 90 180 270 0
 
 
-# [y] [x] [c] [v] [b] [n] [m] [,] [.]
-# [Y]  X   C   V   B  [N] [M]  ;   :
+# [z] [x] [c] [v] [b] [n] [m] [,] [.]
+# [Z]  X   C   V   B  [N] [M]
 
-y      show-text "${chapter-list}"
-Y      show-text "${playlist}"
+z      show-text "${chapter-list}"
+Z      show-text "${playlist}"
 CTRL+y show-text "${playlist}"
 x      show-text "${track-list}"
+X      ignore
 
 c      set speed 1.0
+C      ignore
 v      add speed -0.05
+V      ignore
 b      add speed +0.05
+B      ignore
 n      add sub-delay -0.10
 m      add sub-delay +0.10
 CTRL+n set sub-delay 0
@@ -163,27 +162,24 @@ M      add audio-delay +0.10
 .      frame-step ; show-text "Frame: ${estimated-frame-number} / ${estimated-frame-count}"
 ,      frame-back-step ; show-text "Frame: ${estimated-frame-number} / ${estimated-frame-count}"
 
-X      ignore
-C      ignore
-V      ignore
-B      ignore
-;      ignore
-:      ignore
 
 
-
-# [<] [>] [+] [-] [esc] [space] [BackSpace]
-#         [*] [_] [tab] [enter]
+# [`] [~] [-] [=] [esc] [space] [BackSpace]
+#         [_] [+] [tab] [enter]
 
 <      osd-msg-bar add chapter -1
+`      osd-msg-bar add chapter -1
 >      osd-msg-bar add chapter +1
+~      osd-msg-bar add chapter +1
 CTRL+> osd-msg playlist-prev
+CTRL+~ osd-msg playlist-prev
 CTRL+< osd-msg playlist-next
+CTRL+` osd-msg playlist-next
 
--      add sub-scale -0.05                  # decrease subtitle font size
-+      add sub-scale +0.05                  # increase subtitle font size
-*      add sub-pos -1                       # move subtitles up
-_      add sub-pos +1                       # move subtitles down
+-      add sub-scale +0.05                  # increase subtitle font size
+_      add sub-scale -0.05                  # decrease subtitle font size
+=      add sub-pos -1                       # move subtitles up
++      add sub-pos +1                       # move subtitles down
 
 ESC               cycle fullscreen
 SPACE             cycle pause
@@ -198,7 +194,7 @@ BS     set speed 1.0 ; set gamma 0 ; set brightness 0 ; set contrast 0 ; set sat
 
 # Numpad
 
-KP0      ignore
+KP0      cycle-values video-rotate 90 180 270 0
 KP1      add video-zoom  -0.05
 KP2      add video-pan-y -0.01
 KP3      add video-zoom   0.05
@@ -211,7 +207,7 @@ KP9      add video-zoom   0.05
 KP_DEC   ignore
 KP_ENTER ignore
 
-CTRL+0   ignore
+CTRL+0   cycle-values video-rotate 90 180 270 0
 CTRL+1   add video-zoom  -0.05
 CTRL+2   add video-pan-y -0.01
 CTRL+3   add video-zoom   0.05
